@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Robin Smidsrød
 
 ;Semantic versioning, see http://semver.org/
-version = 0.0.1
+version = 0.1.0
 
 [NextRelease]
 [@Git]
